<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".PengaturanActivity">

    <TextView
        android:id="@+id/txt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif"
        android:text="@string/setting"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt1"
        android:layout_marginBottom="10dp"
        android:text="@string/changepass"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txt3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt2"
        android:layout_marginBottom="10dp"
        android:text="@string/currentpass"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/edtCurrentpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt3"
        android:layout_marginBottom="10dp"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/txt4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtCurrentpass"
        android:layout_marginBottom="10dp"
        android:text="@string/newpass"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/edtNewpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt4"
        android:layout_marginBottom="10dp"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnSimpan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtNewpass"
        android:layout_marginBottom="10dp"
        android:text="@string/simpan"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btnKembali"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnSimpan"
        android:layout_marginBottom="10dp"
        android:text="@string/kembali"
        android:textAllCaps="false" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/ic_account_circle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="5"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/about"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dibuatoleh"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nama"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nim"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tanggal2"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>