<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingHorizontal="20dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="7"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtNominal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nominal"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtKeterangan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/keterangan"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txtTanggal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tanggal"
            android:textSize="14sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imgArrow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_action_arrow_right" />

</LinearLayout>